--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -11,8 +11,13 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     // Navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Coroutines & Flow
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.1"
 
     // UI
     implementation 'androidx.appcompat:appcompat:1.4.0'
